# astel

./: Cargo.toml  readme.org
examples/: main.rs
src/: config.rs  html.rs  lib.rs  router_extension.rs  table_serializer.rs  type_list.rs
src/assets/: main.css  mod.rs
src/examples/: main.rs
src/routes/: delete.rs  edit.rs  home.rs  index.rs  mod.rs  new.rs  view.rs
