[package]
name = "astel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0-rc.1"  }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"

conforming = { git = "https://github.com/annieversary/conforming", rev = "1ae04afeb7f0b9bfbeb97dd2ba46e9d183277ecd" }
# conforming = { path = "../conforming" }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "tokio-macros", "rt-multi-thread"] }
