[package]
name = "astel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0-rc.1" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"

conforming = { git = "https://github.com/annieversary/conforming", rev = "8b508c9668cb12536cea51f45d64b0ba1b6efa46" }
maud = { git = "https://github.com/annieversary/maud", rev = "e39cef7b14485d05146ea1e3da1d4b3c4e21aa9e" }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "tokio-macros", "rt-multi-thread"] }
